--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -12,6 +12,7 @@
     <string name="set_as">Postavi kao</string>
     <string name="value_copied_to_clipboard">Vrijednost spremljena u međuspremnik</string>
     <string name="filter">Filter</string>
+    <string name="change_filter">Change filter</string>
 
     <!-- Permissions -->
     <string name="no_storage_permissions">Potrebna je dozvola za prostor za pohranu</string>
