--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -12,6 +12,7 @@
     <string name="set_as">Ange som</string>
     <string name="value_copied_to_clipboard">Värdet har kopierats till urklipp</string>
     <string name="filter">Filtrera</string>
+    <string name="change_filter">Change filter</string>
 
     <!-- Permissions -->
     <string name="no_storage_permissions">Lagringsbehörighet krävs</string>
