--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -12,6 +12,7 @@
     <string name="set_as">Sett som</string>
     <string name="value_copied_to_clipboard">Verdi kopiert til utklippstavle</string>
     <string name="filter">Filter</string>
+    <string name="change_filter">Change filter</string>
 
     <!-- Permissions -->
     <string name="no_storage_permissions">Tillatelse for lagring kreves</string>
