--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -11,7 +11,10 @@
     <string name="no_app_found">Sovelluksia ei löydetty</string>
     <string name="set_as">Aseta</string>
     <string name="value_copied_to_clipboard">Valeur copiée dans le presse-papier</string>
+
+    <!-- Filters -->
     <string name="filter">Filter</string>
+    <string name="no_items_found">No items found.</string>
     <string name="change_filter">Change filter</string>
 
     <!-- Permissions -->
