--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -11,7 +11,10 @@
     <string name="no_app_found">Nie znaleziono danych aplikacji</string>
     <string name="set_as">Ustaw jako</string>
     <string name="value_copied_to_clipboard">Wartość została skopiowana do schowka</string>
+
+    <!-- Filters -->
     <string name="filter">Filtr</string>
+    <string name="no_items_found">No items found.</string>
     <string name="change_filter">Change filter</string>
 
     <!-- Permissions -->
