--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -11,7 +11,10 @@
     <string name="no_app_found">Приложение не найдено</string>
     <string name="set_as">Установить как…</string>
     <string name="value_copied_to_clipboard">Значение скопировано в буфер обмена</string>
+
+    <!-- Filters -->
     <string name="filter">Фильтрация</string>
+    <string name="no_items_found">No items found.</string>
     <string name="change_filter">Change filter</string>
 
     <!-- Permissions -->
