--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -11,7 +11,10 @@
     <string name="no_app_found">Nenašla sa žiadna vhodná aplikácia</string>
     <string name="set_as">Nastaviť ako</string>
     <string name="value_copied_to_clipboard">Hodnota bola vložená do schránky</string>
+
+    <!-- Filters -->
     <string name="filter">Filtrovať</string>
+    <string name="no_items_found">Nenašli sa žiadne položky.</string>
     <string name="change_filter">Upraviť filter</string>
 
     <!-- Permissions -->
