--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -11,7 +11,10 @@
     <string name="no_app_found">Hittade ingen giltig app</string>
     <string name="set_as">Ange som</string>
     <string name="value_copied_to_clipboard">Värdet har kopierats till urklipp</string>
+
+    <!-- Filters -->
     <string name="filter">Filtrera</string>
+    <string name="no_items_found">No items found.</string>
     <string name="change_filter">Change filter</string>
 
     <!-- Permissions -->
