--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -11,7 +11,10 @@
     <string name="no_app_found">找不到應用程式</string>
     <string name="set_as">設為</string>
     <string name="value_copied_to_clipboard">數值複製到剪貼簿</string>
+
+    <!-- Filters -->
     <string name="filter">Filter</string>
+    <string name="no_items_found">No items found.</string>
     <string name="change_filter">Change filter</string>
 
     <!-- Permissions -->
