--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -11,7 +11,10 @@
     <string name="no_app_found">Aucune application valide trouvée</string>
     <string name="set_as">Définir comme</string>
     <string name="value_copied_to_clipboard">Value copied to clipboard</string>
+
+    <!-- Filters -->
     <string name="filter">Filtrer</string>
+    <string name="no_items_found">No items found.</string>
     <string name="change_filter">Change filter</string>
 
     <!-- Permissions -->
