--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -11,7 +11,10 @@
     <string name="no_app_found">Geçerli bir uygulama bulunamadı</string>
     <string name="set_as">Set as</string>
     <string name="value_copied_to_clipboard">Panoya kopyalanan değer</string>
+
+    <!-- Filters -->
     <string name="filter">Filtre</string>
+    <string name="no_items_found">No items found.</string>
     <string name="change_filter">Change filter</string>
 
     <!-- Permissions -->
