--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -14,8 +14,8 @@
 
     <!-- Filters -->
     <string name="filter">过滤</string>
-    <string name="no_items_found">No items found.</string>
-    <string name="change_filter">Change filter</string>
+    <string name="no_items_found">找不到任何项目。</string>
+    <string name="change_filter">更改过滤器</string>
 
     <!-- Permissions -->
     <string name="no_storage_permissions">请授予存储权限</string>
