--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -14,8 +14,8 @@
 
     <!-- Filters -->
     <string name="filter">Sortieren</string>
-    <string name="no_items_found">No items found.</string>
-    <string name="change_filter">Change filter</string>
+    <string name="no_items_found">Nichts gefunden.</string>
+    <string name="change_filter">Sortierung ändern</string>
 
     <!-- Permissions -->
     <string name="no_storage_permissions">Speicher-Berechtigung wird benötigt</string>
