updating the Show Hidden Items string

--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -221,7 +221,7 @@
     <string name="settings">Nastavení</string>
     <string name="customize_colors">Přizpůsobit barvy</string>
     <string name="use_english_language">Use English language</string>
-    <string name="show_hidden">Zobrazit skryté soubory a složky</string>
+    <string name="show_hidden_items">Zobrazit skryté položky</string>
     <string name="font_size">Font size</string>
     <string name="small">Small</string>
     <string name="medium">Medium</string>
