--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -221,7 +221,7 @@
     <string name="settings">Ajustes</string>
     <string name="customize_colors">Cambiar colores</string>
     <string name="use_english_language">Usar el idioma Inglés</string>
-    <string name="show_hidden">Mostrar ficheros y directorios ocultos</string>
+    <string name="show_hidden_items">Show hidden items</string>
     <string name="font_size">Tamaño de fuente</string>
     <string name="small">Pequeña</string>
     <string name="medium">Medium</string>
