--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -221,7 +221,7 @@
     <string name="settings">Nustatymai</string>
     <string name="customize_colors">Spalvø redagavimas</string>
     <string name="use_english_language">Use English language</string>
-    <string name="show_hidden">Rodyti paslëptus failus ir aplankus</string>
+    <string name="show_hidden_items">Show hidden items</string>
     <string name="font_size">Teksto dydis</string>
     <string name="small">Smulkus</string>
     <string name="medium">Vidutinis</string>
