--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -221,7 +221,7 @@
     <string name="settings">Instellingen</string>
     <string name="customize_colors">Kleuren aanpassen</string>
     <string name="use_english_language">Use English language</string>
-    <string name="show_hidden">Verborgen bestanden en mappen tonen</string>
+    <string name="show_hidden_items">Show hidden items</string>
     <string name="font_size">Lettergrootte</string>
     <string name="small">Klein</string>
     <string name="medium">Normaal</string>
