--- a/commons/src/main/res/values-no/strings.xml
+++ b/commons/src/main/res/values-no/strings.xml
@@ -221,7 +221,7 @@
     <string name="settings">Innstillinger</string>
     <string name="customize_colors">Tilpass farger</string>
     <string name="use_english_language">Use English language</string>
-    <string name="show_hidden">Show hidden files and folders</string>
+    <string name="show_hidden_items">Show hidden items</string>
     <string name="font_size">Skriftstørrelse</string>
     <string name="small">Liten</string>
     <string name="medium">Middels</string>
