--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -221,7 +221,7 @@
     <string name="settings">Definições</string>
     <string name="customize_colors">Personalizar cores</string>
     <string name="use_english_language">Utilizar aplicação em inglês</string>
-    <string name="show_hidden">Mostrar ficheiros e pastas ocultos</string>
+    <string name="show_hidden_items">Show hidden items</string>
     <string name="font_size">Tamanho do texto</string>
     <string name="small">Pequeno</string>
     <string name="medium">Médio</string>
