--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -221,7 +221,7 @@
     <string name="settings">Inställningar</string>
     <string name="customize_colors">Anpassa färger</string>
     <string name="use_english_language">Använd engelska</string>
-    <string name="show_hidden">Visa dolda filer och mappar</string>
+    <string name="show_hidden_items">Show hidden items</string>
     <string name="font_size">Teckenstorlek</string>
     <string name="small">Liten</string>
     <string name="medium">Medelstor</string>
