--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -221,7 +221,7 @@
     <string name="settings">设置</string>
     <string name="customize_colors">自定义颜色</string>
     <string name="use_english_language">强制使用英语语言</string>
-    <string name="show_hidden">显示隐藏文件和文件夹</string>
+    <string name="show_hidden_items">Show hidden items</string>
     <string name="font_size">字体大小</string>
     <string name="small">小</string>
     <string name="medium">中</string>
