--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -221,7 +221,7 @@
     <string name="settings">Paramètres</string>
     <string name="customize_colors">Personnaliser les couleurs</string>
     <string name="use_english_language">Use English language</string>
-    <string name="show_hidden">Montrer les fichiers et dossiers cachés</string>
+    <string name="show_hidden_items">Show hidden items</string>
     <string name="font_size">Taille police</string>
     <string name="small">Petite</string>
     <string name="medium">Moyenne</string>
