--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -225,7 +225,7 @@
     <string name="settings">Postavke</string>
     <string name="customize_colors">Prilagodi boje</string>
     <string name="use_english_language">Koristi Engleski jezik</string>
-    <string name="show_hidden">Prikaži skrivene datoteke i direktorije</string>
+    <string name="show_hidden_items">Show hidden items</string>
     <string name="font_size">Veličina fonta</string>
     <string name="small">Malo</string>
     <string name="medium">Srednje</string>
