--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -221,7 +221,7 @@
     <string name="settings">Settings</string>
     <string name="customize_colors">Customize colors</string>
     <string name="use_english_language">Use English language</string>
-    <string name="show_hidden">Show hidden files and folders</string>
+    <string name="show_hidden_items">Show hidden items</string>
     <string name="font_size">Betűméret</string>
     <string name="small">Kicsi</string>
     <string name="medium">Közepes</string>
