--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -221,7 +221,7 @@
     <string name="settings">Impostazioni</string>
     <string name="customize_colors">Personalizza i colori</string>
     <string name="use_english_language">Forza la lingua inglese</string>
-    <string name="show_hidden">Mostra file e cartelle nascosti</string>
+    <string name="show_hidden_items">Show hidden items</string>
     <string name="font_size">Dimensione carattere</string>
     <string name="small">Piccolo</string>
     <string name="medium">Medio</string>
