--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -221,7 +221,7 @@
     <string name="settings">設定</string>
     <string name="customize_colors">表示色のカスタマイズ</string>
     <string name="use_english_language">Use English language</string>
-    <string name="show_hidden">非表示のファイルとディレクトリーを表示する</string>
+    <string name="show_hidden_items">Show hidden items</string>
     <string name="font_size">メモのフォントサイズ</string>
     <string name="small">小</string>
     <string name="medium">通常</string>
