--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -225,7 +225,7 @@
     <string name="settings">Ustawienia</string>
     <string name="customize_colors">Dostosuj kolory</string>
     <string name="use_english_language">Wymuś używanie przez aplikację języka angielskiego</string>
-    <string name="show_hidden">Pokazuj ukryte pliki i foldery</string>
+    <string name="show_hidden_items">Show hidden items</string>
     <string name="font_size">Rozmiar czcionki</string>
     <string name="small">Mała</string>
     <string name="medium">Średnia</string>
