--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -225,7 +225,7 @@
     <string name="settings">Nastavenia</string>
     <string name="customize_colors">Upraviť farby</string>
     <string name="use_english_language">Použiť angličtinu</string>
-    <string name="show_hidden">Zobraziť skryté súbory a priečinky</string>
+    <string name="show_hidden_items">Zobraziť skryté položky</string>
     <string name="font_size">Veľkosť písma</string>
     <string name="small">Malé</string>
     <string name="medium">Stredné</string>
