--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -221,7 +221,7 @@
     <string name="settings">設定</string>
     <string name="customize_colors">自訂顏色</string>
     <string name="use_english_language">使用英文語言</string>
-    <string name="show_hidden">顯示隱藏的檔案及資料夾</string>
+    <string name="show_hidden_items">Show hidden items</string>
     <string name="font_size">字體大小</string>
     <string name="small">小</string>
     <string name="medium">中</string>
