--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -14,8 +14,8 @@
 
     <!-- Filters -->
     <string name="filter">Filter</string>
-    <string name="no_items_found">No items found.</string>
-    <string name="change_filter">Change filter</string>
+    <string name="no_items_found">Ingen elementer funnet.</string>
+    <string name="change_filter">Endre filter</string>
 
     <!-- Permissions -->
     <string name="no_storage_permissions">Tillatelse for lagring kreves</string>
@@ -86,9 +86,9 @@
     <string name="select_folder">Velg en mappe</string>
     <string name="select_file">Velg en fil</string>
     <string name="confirm_storage_access_title">Bekreft ekstern lagringstilgang</string>
-    <string name="confirm_storage_access_text">Please choose the root folder of the SD card on the next screen, to grant write access</string>
-    <string name="confirm_storage_access_text_sd">If you don\'t see the SD card, try this</string>
-    <string name="confirm_selection">Confirm selection</string>
+    <string name="confirm_storage_access_text">Velg rotmappen til SD-kortet på den neste skjermen for å gi skrivetilgang</string>
+    <string name="confirm_storage_access_text_sd">Hvis du ikke ser SD-kortet, prøv dette</string>
+    <string name="confirm_selection">Bekreft valg</string>
 
     <plurals name="items">
         <item quantity="one">%1$d element</item>
@@ -100,23 +100,23 @@
     <string name="internal">Intern</string>
     <string name="sd_card">SD-kort</string>
     <string name="root">Rot</string>
-    <string name="wrong_root_selected">Wrong folder selected, please select the root folder of your SD card</string>
+    <string name="wrong_root_selected">Feil mappe er valgt, velg rotmappen til SD-kortet</string>
 
     <!-- File properties -->
-    <string name="properties">Properties</string>
-    <string name="path">Path</string>
-    <string name="items_selected">Items selected</string>
+    <string name="properties">Egenskaper</string>
+    <string name="path">Bane</string>
+    <string name="items_selected">Valgte elementer</string>
     <string name="direct_children_count">Direct children count</string>
-    <string name="files_count">Total files count</string>
-    <string name="resolution">Resolution</string>
-    <string name="duration">Duration</string>
+    <string name="files_count">Totale antall filer</string>
+    <string name="resolution">Oppløsning</string>
+    <string name="duration">Varighet</string>
     <string name="artist">Artist</string>
     <string name="album">Album</string>
-    <string name="focal_length">Focal length</string>
-    <string name="exposure_time">Exposure time</string>
-    <string name="iso_speed">ISO speed</string>
-    <string name="f_number">F-number</string>
-    <string name="camera">Camera</string>
+    <string name="focal_length">Brennvidde</string>
+    <string name="exposure_time">Eksponeringstid</string>
+    <string name="iso_speed">ISO-verdi</string>
+    <string name="f_number">Blendertall</string>
+    <string name="camera">Kamera</string>
     <string name="exif">EXIF</string>
 
     <!-- Color customization -->
@@ -156,14 +156,14 @@
     <string name="rename">Endre navn</string>
     <string name="share">Del</string>
     <string name="share_via">Del via</string>
-    <string name="select_all">Select all</string>
-    <string name="hide">Hide</string>
-    <string name="unhide">Unhide</string>
-    <string name="hide_folder">Hide folder</string>
-    <string name="unhide_folder">Unhide folder</string>
-    <string name="temporarily_show_hidden">Temporarily show hidden</string>
-    <string name="stop_showing_hidden">Stop showing hidden media</string>
-    <string name="maximum_share_reached">You cannot share this much content at once</string>
+    <string name="select_all">Velg alle</string>
+    <string name="hide">Skjul</string>
+    <string name="unhide">Ikke skjul</string>
+    <string name="hide_folder">Skjul mappe</string>
+    <string name="unhide_folder">Ikke skjul mappe</string>
+    <string name="temporarily_show_hidden">Vis skjulte midlertidig</string>
+    <string name="stop_showing_hidden">Stopp å vise skjulte media</string>
+    <string name="maximum_share_reached">Du kan ikke dele så mye innhold på en gang</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sorter etter</string>
@@ -184,24 +184,24 @@
     <string name="no">Nei</string>
 
     <!-- Password protection -->
-    <string name="pin">PIN</string>
-    <string name="enter_pin">Enter PIN</string>
-    <string name="please_enter_pin">Please enter a PIN</string>
-    <string name="wrong_pin">Wrong PIN</string>
-    <string name="repeat_pin">Repeat PIN</string>
-    <string name="pattern">Pattern</string>
-    <string name="insert_pattern">Insert pattern</string>
-    <string name="wrong_pattern">Wrong pattern</string>
-    <string name="repeat_pattern">Repeat pattern</string>
-    <string name="fingerprint">Fingerprint</string>
-    <string name="add_fingerprint">Add fingerprint</string>
-    <string name="place_finger">Please place your finger on the fingerprint sensor</string>
-    <string name="authentication_failed">Authentication failed</string>
-    <string name="authentication_blocked">Authentication blocked, please try again in a moment</string>
-    <string name="no_fingerprints_registered">You have no fingerprints registered, please add some in the Settings of your device</string>
-    <string name="go_to_settings">Go to Settings</string>
-    <string name="protection_setup_successfully">Password setup successfully. Please reinstall the app in case you forget it.</string>
-    <string name="fingerprint_setup_successfully">Protection setup successfully. Please reinstall the app in case of problems with reseting it.</string>
+    <string name="pin">PIN-kode</string>
+    <string name="enter_pin">Oppfør PIN-kode</string>
+    <string name="please_enter_pin">Oppfør en PIN-kode</string>
+    <string name="wrong_pin">Feil PIN-kode</string>
+    <string name="repeat_pin">Gjenta PIN-kode</string>
+    <string name="pattern">Mønster</string>
+    <string name="insert_pattern">Tegn mønster</string>
+    <string name="wrong_pattern">Feil mønster</string>
+    <string name="repeat_pattern">Gjenta mønster</string>
+    <string name="fingerprint">Fingeravtrykk</string>
+    <string name="add_fingerprint">Legg til fingeravtrykk</string>
+    <string name="place_finger">Plasser fingeren på fingeravtrykksensoren</string>
+    <string name="authentication_failed">Autentisering feilet</string>
+    <string name="authentication_blocked">Autentisering blokkert, prøv igjen</string>
+    <string name="no_fingerprints_registered">Du har ingen fingeravtrykk registrert, legg til i enhetens innstillinger</string>
+    <string name="go_to_settings">Gå til Innstillinger</string>
+    <string name="protection_setup_successfully">Passord er stilt inn. Installer appen på nytt hvis du glemmer det.</string>
+    <string name="fingerprint_setup_successfully">Beskyttelse er stilt inn. Installer appen på nytt i tilfelle problemer med å tilbakestille.</string>
 
     <!-- Times -->
     <plurals name="seconds">
@@ -221,16 +221,16 @@
     <string name="settings">Innstillinger</string>
     <string name="customize_colors">Tilpass farger</string>
     <string name="use_english_language">Bruk engelsk språk</string>
-    <string name="show_hidden_items">Show hidden items</string>
+    <string name="show_hidden">Vis skjulte filer og mapper</string>
     <string name="font_size">Skriftstørrelse</string>
     <string name="small">Liten</string>
     <string name="medium">Middels</string>
     <string name="large">Stor</string>
     <string name="extra_large">Ekstra stor</string>
-    <string name="password_protect_hidden_items">Password protect hidden item visibility</string>
-    <string name="password_protect_whole_app">Password protect the whole application</string>
-    <string name="keep_last_modified">Keep old last-modified value at file copy/move/rename</string>
-    <string name="show_info_bubble">Show an info bubble at scrolling items by scrollbar dragging</string>
+    <string name="password_protect_hidden_items">Passordbeskytt synlighet for skjulte elementer</string>
+    <string name="password_protect_whole_app">Passordbeskytt hele appen</string>
+    <string name="keep_last_modified">Behold gammel Sist endret-verdi ved kopier/flytt/endre navn for filer</string>
+    <string name="show_info_bubble">Vis en info-boble ved å dra i rullefeltet</string>
 
     <!-- About -->
     <string name="about">Om</string>
