--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -221,7 +221,7 @@
     <string name="settings">Einstellungen</string>
     <string name="customize_colors">Farben anpassen</string>
     <string name="use_english_language">Englische Sprache verwenden</string>
-    <string name="show_hidden_items">Show hidden items</string>
+    <string name="show_hidden_items">Versteckte Dateien/Ordner anzeigen</string>
     <string name="font_size">Schriftgröße</string>
     <string name="small">Klein</string>
     <string name="medium">Mittel</string>
