--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -221,7 +221,7 @@
     <string name="settings">Innstillinger</string>
     <string name="customize_colors">Tilpass farger</string>
     <string name="use_english_language">Bruk engelsk språk</string>
-    <string name="show_hidden">Vis skjulte filer og mapper</string>
+    <string name="show_hidden_items">Vis skjulte elementer</string>
     <string name="font_size">Skriftstørrelse</string>
     <string name="small">Liten</string>
     <string name="medium">Middels</string>
