--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -14,8 +14,8 @@
 
     <!-- Filters -->
     <string name="filter">Filter</string>
-    <string name="no_items_found">No items found.</string>
-    <string name="change_filter">Change filter</string>
+    <string name="no_items_found">Geen items gevonden.</string>
+    <string name="change_filter">Filter aanpassen</string>
 
     <!-- Permissions -->
     <string name="no_storage_permissions">Permissie voor opslag benodigd</string>
@@ -221,7 +221,7 @@
     <string name="settings">Instellingen</string>
     <string name="customize_colors">Kleuren aanpassen</string>
     <string name="use_english_language">Use English language</string>
-    <string name="show_hidden_items">Show hidden items</string>
+    <string name="show_hidden_items">Verborgen items tonen</string>
     <string name="font_size">Lettergrootte</string>
     <string name="small">Klein</string>
     <string name="medium">Normaal</string>
@@ -230,7 +230,7 @@
     <string name="password_protect_hidden_items">Verborgen items met wachtwoord beveiligen</string>
     <string name="password_protect_whole_app">Hele app met wachtwoord beveiligen</string>
     <string name="keep_last_modified">Datum laatst gewijzigd behouden bij bestandsoperaties</string>
-    <string name="show_info_bubble">Show an info bubble at scrolling items by scrollbar dragging</string>
+    <string name="show_info_bubble">Bij slepen van schuifbalk extra informatie tonen</string>
 
     <!-- About -->
     <string name="about">Over</string>
