--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -14,14 +14,14 @@
 
     <!-- Filters -->
     <string name="filter">필터</string>
-    <string name="no_items_found">No items found.</string>
-    <string name="change_filter">Change filter</string>
+    <string name="no_items_found">항목을 찾지 못함</string>
+    <string name="change_filter">필터 변경</string>
 
     <!-- Permissions -->
-    <string name="no_storage_permissions">Storage permission is required</string>
-    <string name="no_contacts_permission">Contacts permission is required</string>
-    <string name="no_camera_permissions">Camera permission is required</string>
-    <string name="no_audio_permissions">Audio permission is required</string>
+    <string name="no_storage_permissions">저장 권한이 필요함</string>
+    <string name="no_contacts_permission">주소록 사용 권한이 필요함</string>
+    <string name="no_camera_permissions">카메라 사용 권한이 필요함</string>
+    <string name="no_audio_permissions">오디오 사용 권한이 필요함</string>
 
     <!-- Renaming -->
     <string name="rename_file">파일명 변경</string>
@@ -60,8 +60,8 @@
     <string name="copying_success_partial">일부 파일을 복사 할 수 없음</string>
     <string name="no_files_selected">파일이 선택되지 않음</string>
     <string name="saving">저장중&#8230;</string>
-    <string name="could_not_create_folder">Could not create folder %s</string>
-    <string name="could_not_create_file">Could not create file %s</string>
+    <string name="could_not_create_folder">%s 폴더 생성에 실패함</string>
+    <string name="could_not_create_file">%s 파일 생성에 실패함</string>
 
     <!-- Create new -->
     <string name="create_new">새로 만들기</string>
@@ -122,7 +122,7 @@
     <!-- Color customization -->
     <string name="background_color">배경 색상</string>
     <string name="text_color">텍스트 색상</string>
-    <string name="primary_color">Primary color</string>
+    <string name="primary_color">주요 색상</string>
     <string name="restore_defaults">기본설정으로 변경</string>
     <string name="theme">테마</string>
     <string name="changing_color_description">Changing a color will make it switch to Custom theme</string>
@@ -131,7 +131,7 @@
     <string name="undo_changes">변경사항 되돌리기</string>
     <string name="undo_changes_confirmation">변경된 사항을  되돌리겠습니까?</string>
     <string name="save_before_closing">변경사항을 저장하지 않았습니다. 종료전에 저장 하시겠습니까?</string>
-    <string name="apply_to_all_apps">Apply colors to all Simple Apps</string>
+    <string name="apply_to_all_apps">심플 시리즈 애플리케이션에 일괄적용</string>
     <string name="share_colors_success">Colors updated successfully. A new Theme called \'Shared\' has been added, please use that for updating all app colors in the future.</string>
     <string name="purchase_thank_you">
         <![CDATA[
@@ -220,7 +220,7 @@
     <!-- Settings -->
     <string name="settings">설정</string>
     <string name="customize_colors">앱 테마 및 색상 설정</string>
-    <string name="use_english_language">Use English language</string>
+    <string name="use_english_language">영어 사용</string>
     <string name="show_hidden_items">Show hidden items</string>
     <string name="font_size">폰트 크기</string>
     <string name="small">작게</string>
@@ -230,7 +230,7 @@
     <string name="password_protect_hidden_items">숨김파일 보기 암호설정</string>
     <string name="password_protect_whole_app">Password protect the whole application</string>
     <string name="keep_last_modified">Keep old last-modified value at file copy/move/rename</string>
-    <string name="show_info_bubble">Show an info bubble at scrolling items by scrollbar dragging</string>
+    <string name="show_info_bubble">스크롤바 드래그 시 항목별 툴팁 활성화</string>
 
     <!-- About -->
     <string name="about">앱정보</string>
