--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -179,9 +179,9 @@
     <string name="use_for_this_folder">현재 폴더만 적용</string>
 
     <!-- Confirmation dialog -->
-    <string name="proceed_with_deletion">Are you sure you want to proceed with the deletion?</string>
-    <string name="yes">Yes</string>
-    <string name="no">No</string>
+    <string name="proceed_with_deletion">정말로 삭제 하시겠습니까?</string>
+    <string name="yes">네</string>
+    <string name="no">아니요</string>
 
     <!-- Password protection -->
     <string name="pin">PIN</string>
@@ -221,15 +221,15 @@
     <string name="settings">설정</string>
     <string name="customize_colors">앱 테마 및 색상 설정</string>
     <string name="use_english_language">영어 사용</string>
-    <string name="show_hidden_items">Show hidden items</string>
+    <string name="show_hidden_items">숨김항목 활성화</string>
     <string name="font_size">폰트 크기</string>
     <string name="small">작게</string>
     <string name="medium">중간</string>
     <string name="large">크게</string>
     <string name="extra_large">아주 크게</string>
     <string name="password_protect_hidden_items">숨김파일 보기 암호설정</string>
-    <string name="password_protect_whole_app">Password protect the whole application</string>
-    <string name="keep_last_modified">Keep old last-modified value at file copy/move/rename</string>
+    <string name="password_protect_whole_app">애플리케이션 전체에서 암호를 이용한 보호기능 사용</string>
+    <string name="keep_last_modified">파일 복사/이동/변경 시 이전파일을 보관</string>
     <string name="show_info_bubble">스크롤바 드래그 시 항목별 툴팁 활성화</string>
 
     <!-- About -->
