--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -11,6 +11,7 @@
     <string name="no_app_found">Приложение не найдено</string>
     <string name="set_as">Установить как…</string>
     <string name="value_copied_to_clipboard">Значение скопировано в буфер обмена</string>
+    <string name="unknown">Unknown</string>
 
     <!-- Filters -->
     <string name="filter">Фильтрация</string>
