--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -11,6 +11,7 @@
     <string name="no_app_found">Nebyla nalezena žádná vhodná aplikace</string>
     <string name="set_as">Nastavit jako</string>
     <string name="value_copied_to_clipboard">Value copied to clipboard</string>
+    <string name="unknown">Unknown</string>
 
     <!-- Filters -->
     <string name="filter">Filtrovat</string>
