--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -11,6 +11,7 @@
     <string name="no_app_found">No se encontró una aplicación válida</string>
     <string name="set_as">Establecer como</string>
     <string name="value_copied_to_clipboard">Valor copiado en el portapapeles</string>
+    <string name="unknown">Unknown</string>
 
     <!-- Filters -->
     <string name="filter">Filtrar</string>
