--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -11,6 +11,7 @@
     <string name="no_app_found">有効なアプリが見つかりません</string>
     <string name="set_as">他で使う</string>
     <string name="value_copied_to_clipboard">値をクリップボードにコピーしました</string>
+    <string name="unknown">Unknown</string>
 
     <!-- Filters -->
     <string name="filter">Filter</string>
