--- a/commons/src/main/res/values-no/strings.xml
+++ b/commons/src/main/res/values-no/strings.xml
@@ -11,6 +11,7 @@
     <string name="no_app_found">Ingen gyldig app funnet</string>
     <string name="set_as">Sett som</string>
     <string name="value_copied_to_clipboard">Value copied to clipboard</string>
+    <string name="unknown">Unknown</string>
 
     <!-- Filters -->
     <string name="filter">Filter</string>
