--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -11,6 +11,7 @@
     <string name="no_app_found">Geçerli bir uygulama bulunamadı</string>
     <string name="set_as">Set as</string>
     <string name="value_copied_to_clipboard">Panoya kopyalanan değer</string>
+    <string name="unknown">Unknown</string>
 
     <!-- Filters -->
     <string name="filter">Filtre</string>
