--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -11,7 +11,7 @@
     <string name="no_app_found">未找到可用应用</string>
     <string name="set_as">设置为</string>
     <string name="value_copied_to_clipboard">颜色值已复制到剪贴板</string>
-    <string name="unknown">Unknown</string>
+    <string name="unknown">未知</string>
 
     <!-- Filters -->
     <string name="filter">过滤</string>
@@ -222,7 +222,7 @@
     <string name="settings">设置</string>
     <string name="customize_colors">自定义颜色</string>
     <string name="use_english_language">强制使用英语语言</string>
-    <string name="show_hidden_items">Show hidden items</string>
+    <string name="show_hidden_items">显示隐藏的项目</string>
     <string name="font_size">字体大小</string>
     <string name="small">小</string>
     <string name="medium">中</string>
