--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -11,7 +11,7 @@
     <string name="no_app_found">Keine passende App gefunden</string>
     <string name="set_as">Festlegen als</string>
     <string name="value_copied_to_clipboard">Wert in Zwischenablage kopiert</string>
-    <string name="unknown">Unknown</string>
+    <string name="unknown">Unbekannt</string>
 
     <!-- Filters -->
     <string name="filter">Sortieren</string>
