adding Black & White string

--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -145,6 +145,7 @@
     <string name="dark_theme">Tmavý</string>
     <string name="solarized">Solarizovaná</string>
     <string name="dark_red">Dark red</string>
+    <string name="black_white">Black &amp; White</string>
     <string name="custom">Vlastní</string>
     <string name="shared">Shared</string>
 
