--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -146,6 +146,7 @@
     <string name="dark_theme">Tamna</string>
     <string name="solarized">Solarizirana</string>
     <string name="dark_red">Tamno crvena</string>
+    <string name="black_white">Black &amp; White</string>
     <string name="custom">Prilagođena</string>
     <string name="shared">Dijeljena</string>
 
