--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -145,6 +145,7 @@
     <string name="dark_theme">Scuro</string>
     <string name="solarized">Solarizzato</string>
     <string name="dark_red">Rosso scuro</string>
+    <string name="black_white">Black &amp; White</string>
     <string name="custom">Personale</string>
     <string name="shared">Condiviso</string>
 
