--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -145,6 +145,7 @@
     <string name="dark_theme">Mørkt</string>
     <string name="solarized">Solarisert</string>
     <string name="dark_red">Mørkerødt</string>
+    <string name="black_white">Black &amp; White</string>
     <string name="custom">Tilpasset</string>
     <string name="shared">Delt</string>
 
