--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -146,6 +146,7 @@
     <string name="dark_theme">Ciemny</string>
     <string name="solarized">Solaryzacja</string>
     <string name="dark_red">Ciemnoczerwony</string>
+    <string name="black_white">Black &amp; White</string>
     <string name="custom">Własny</string>
     <string name="shared">Wspólny</string>
 
