--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -145,6 +145,7 @@
     <string name="dark_theme">Escuro</string>
     <string name="solarized">Ensolarado</string>
     <string name="dark_red">Vermelho Escuro</string>
+    <string name="black_white">Black &amp; White</string>
     <string name="custom">Personalizado</string>
     <string name="shared">Compartilhado</string>
 
