--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -145,6 +145,7 @@
     <string name="dark_theme">Escuro</string>
     <string name="solarized">Solar</string>
     <string name="dark_red">Vermelho escuro</string>
+    <string name="black_white">Black &amp; White</string>
     <string name="custom">Personalizado</string>
     <string name="shared">Partilhado</string>
 
