--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -145,6 +145,7 @@
     <string name="dark_theme">Тёмная</string>
     <string name="solarized">Солнечная</string>
     <string name="dark_red">Тёмно-красная</string>
+    <string name="black_white">Black &amp; White</string>
     <string name="custom">Своя</string>
     <string name="shared">Общая</string>
 
