--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -145,6 +145,7 @@
     <string name="dark_theme">Mörkt</string>
     <string name="solarized">Solariserat</string>
     <string name="dark_red">Mörkrött</string>
+    <string name="black_white">Black &amp; White</string>
     <string name="custom">Anpassat</string>
     <string name="shared">Delat</string>
 
