--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -145,6 +145,7 @@
     <string name="dark_theme">灰暗主題</string>
     <string name="solarized">Solarized</string>
     <string name="dark_red">深紅</string>
+    <string name="black_white">Black &amp; White</string>
     <string name="custom">自訂</string>
     <string name="shared">分享</string>
 
