--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -145,6 +145,7 @@
     <string name="dark_theme">Dunkel</string>
     <string name="solarized">Solarized</string>
     <string name="dark_red">Dunkelrot</string>
+    <string name="black_white">Black &amp; White</string>
     <string name="custom">Benutzerdefiniert</string>
     <string name="shared">Shared</string>
 
