--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -145,6 +145,7 @@
     <string name="dark_theme">ダーク</string>
     <string name="solarized">Solarized</string>
     <string name="dark_red">Dark red</string>
+    <string name="black_white">Black &amp; White</string>
     <string name="custom">カスタム</string>
     <string name="shared">Shared</string>
 
