--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -145,6 +145,7 @@
     <string name="dark_theme">深色主题</string>
     <string name="solarized">Solarized</string>
     <string name="dark_red">深红</string>
+    <string name="black_white">Black &amp; White</string>
     <string name="custom">自定义</string>
     <string name="shared">共享</string>
 
