--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -11,7 +11,7 @@
     <string name="no_app_found">Ingen gyldig app funnet</string>
     <string name="set_as">Sett som</string>
     <string name="value_copied_to_clipboard">Verdi kopiert til utklippstavle</string>
-    <string name="unknown">Unknown</string>
+    <string name="unknown">Ukjent</string>
 
     <!-- Filters -->
     <string name="filter">Filter</string>
@@ -145,7 +145,7 @@
     <string name="dark_theme">Mørkt</string>
     <string name="solarized">Solarisert</string>
     <string name="dark_red">Mørkerødt</string>
-    <string name="black_white">Black &amp; White</string>
+    <string name="black_white">Svart &amp; hvitt</string>
     <string name="custom">Tilpasset</string>
     <string name="shared">Delt</string>
 
