updating a German string

--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -145,7 +145,7 @@
     <string name="dark_theme">Dunkel</string>
     <string name="solarized">Solarized</string>
     <string name="dark_red">Dunkelrot</string>
-    <string name="black_white">Schwarz&macr;Weiß</string>
+    <string name="black_white">Schwarz-Weiß</string>
     <string name="custom">Benutzerdefiniert</string>
     <string name="shared">Shared</string>
 
