Update Korean translation

--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -123,7 +123,7 @@
     <!-- Color customization -->
     <string name="background_color">배경 색상</string>
     <string name="text_color">텍스트 색상</string>
-    <string name="primary_color">주요 색상</string>
+    <string name="primary_color">주요 색상(테마)</string>
     <string name="restore_defaults">기본설정으로 변경</string>
     <string name="theme">테마</string>
     <string name="changing_color_description">Changing a color will make it switch to Custom theme</string>
