--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -11,7 +11,7 @@
     <string name="no_app_found">Geen app gevonden om dit bestand mee te openen</string>
     <string name="set_as">Instellen als</string>
     <string name="value_copied_to_clipboard">Gekopieerd naar klembord</string>
-    <string name="unknown">Unknown</string>
+    <string name="unknown">Onbekend</string>
 
     <!-- Filters -->
     <string name="filter">Filter</string>
@@ -145,7 +145,7 @@
     <string name="dark_theme">Donker</string>
     <string name="solarized">Overbelicht</string>
     <string name="dark_red">Donkerrood</string>
-    <string name="black_white">Black &amp; White</string>
+    <string name="black_white">Zwart &amp; Wit</string>
     <string name="custom">Aangepast</string>
     <string name="shared">Gedeeld</string>
 
